trunk/Archive2/eb/3ae39d6e669aab/output
main.cpp: In function 'int main()':
main.cpp:13:16: error: invalid initialization of non-const reference of type 'foo&' from an rvalue of type '<brace-enclosed initializer list>'
     foo &fr{ f };
                ^
main.cpp:13:10: error: unused variable 'fr' [-Werror=unused-variable]
     foo &fr{ f };
          ^
cc1plus: all warnings being treated as errors
